--- a/listaTarefas/index.html
+++ b/listaTarefas/index.html
@@ -12,10 +12,11 @@
 
     <div class="conteiner">
         <h1>Lista de Tarefas</h1>
-        <form id="tarefa" <input type=="tarefa" id="tarefa" name="tarefa" placeholder="Digite a tarefa" required>
+        <form id="task-form">
+            <input type="text" id="task-input" placeholder="Digite a tarefa" required>
             <button type="submit">Adicionar</button>
         </form>
-        <ul id="tarefa"></ul>
+        <ul id="task-list"></ul>
 
     </div>
     <script src="script.js"></script>
