--- a/metodos/14createDiv.html
+++ b/metodos/14createDiv.html
@@ -15,7 +15,39 @@
     div.textContent = "Nova div";
     div.style.backgroundColor = "lightblue"; // Adiciona cor de fundo
     div.style.padding = "10px";     
-    div.style.color = "red"        // Adiciona espaçamento interno
+    div.style.color = "red"  
+    div.style.width = "200px"; 
+    div.style.height = "200px"; 
+    div.style.margin = "10px";
+    div.style.border = "1px solid black";
+    div.style.borderRadius = "10px";
+    div.style.textAlign = "center";
+    div.style.fontFamily = "Arial";
+    div.style.fontSize = "30px";
+    div.style.fontWeight = "bold";
+    div.style.textTransform = "uppercase";
+    div.style.boxShadow = "5px 5px 5px black";
+    div.style.transition = "all 0.5s";
+    div.onmouseover = function() {
+        div.style.backgroundColor = "lightgreen";
+        div.style.color = "black";
+    };
+    div.onmouseout = function() {
+        div.style.backgroundColor = "lightblue";
+        div.style.color = "red";
+    };
+    div.onclick = function() {
+        div.style.backgroundColor = "lightcoral";
+        div.style.color = "white";
+    };
+    div.ondblclick = function() {
+        div.style.backgroundColor = "lightblue";
+        div.style.color = "red";
+    };
+    div.onmousedown = function() {
+        div.style.backgroundColor = "lightcoral";
+        div.style.color = "white";
+    };
     document.body.appendChild(div);
 
 
