--- a/integraAPI/indec.html
+++ b/integraAPI/indec.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>API Lista De Usuarios</h1>
+        <h2>Como consumir API com Javascript</h2>
+        <button id="fech-usuario">Buscar Usuarios</button>
+        <p>This  is a simple example of an HTML document with a linked CSS file and JavaScript file.</p>
 </body>
-<script></script>
+<script src="script.js"></script>
 
 </html>
