--- a/integraAPI/indec.html
+++ b/integraAPI/indec.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API Lista de Usuários</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>API Lista De Usuarios</h1>
-        <h2>Como consumir API com Javascript</h2>
-        <button id="fech-usuario">Buscar Usuarios</button>
-        <p>This  is a simple example of an HTML document with a linked CSS file and JavaScript file.</p>
+        <h1>API Lista de Usuários</h1>
+        <h2>Como consumir API com JavaScript</h2>
+        <button id="fetch-users">Buscar Usuários</button>
+        <p>Exemplo simples de consumo de API usando HTML, CSS e JavaScript.</p>
+        <div id="usersList"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
-
 </html>
