--- a/freeCodeCamp/contador/03/index.html
+++ b/freeCodeCamp/contador/03/index.html
@@ -25,12 +25,12 @@
         </div>
       </div>
     </main>
-    <script src="script.js"></script>
   </body>
   <footer class="container">
     <p>© 2024 Gerson Santos</p>
     <!-- rodapé -->
   </footer>
 </body>
+<script src="scrpt.js"></script>
  <script src="assets/js/bootstrap.bundle.min.js"></script>
 </html>
