--- a/freeCodeCamp/contador/00/index copy.html
+++ b/freeCodeCamp/contador/00/index copy.html
@@ -2,33 +2,38 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lista de tarefas</title>
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/fontawesome/all.min.css">
-  <link rel="shortcut icon" href="assets/imagens/favicon.png" type="assets/imagens/png">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de tarefas</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fontawesome/all.min.css">
+
+
+    <link rel="shortcut icon" href="assets/imagens/favicon.png" type="assets/imagens/png">
 </head>
+
 <body>
-  <header>
-    <h1 class="m-0 p-0 text-info"><i class="fa-solid fa-user-tie me-2"></i><span id="username"> contador</span></h1>
-  </header>
-  <main class="container">
-    <section aria-labelledby="tarefas-title">
-      <H3>Contador</H3>
-      <SPan  id="valor">0</SPan>
-      <!-- lista de tarefas aqui -->
-      <div class="container-botoes">
-        <button class="botao diminuir">diminuir</button>
-        <button class="botao reiniciar">reiniciar</button>
-        <button class="botao aumentar">aumentar</button>
-    </section>
-  </main>
-  <footer class="container">
-      <p>© 2024 Gerson Santos</p>
-  </footer>
-  <script src="script.js"></script>
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <h1><i class="fa-solid fa-user-tie me-2"></i>Usuario</h1>
+    <h1><i class="fa-solid fa-user-tie me-2"></i> Usuario</h1>
+    <h1 class="m-0 p-0 text-info"><i class="fa-solid fa-user-tie me-2"></i><span id="username"></span></h1>
+    <h1><i class="fas fa-envelope"></i> E-mail </h1>
+    <h1><i class="fa-solid fa-magnifying-glass-plus"></i> Procurar</h1>
+
+    <h1><i class="fa-solid fa-circle-chevron-right"></i> Tarefas </h1>
+    <h1><i class="fa-regular fa-pen-to-square me-2"></i> Nova tarefa</h1>
+    <h1><i class="fa-regular fa-trash-can me-2"></i> Lixeira</h1>
+    <h2><i class="fa-regular fa-trash-can me-2"></i> Lixeira</h2>
+    <h3><i class="fa-regular fa-trash-can me-2"></i> Lixeira</h3>
+    <h1><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></h1>
+    <h1><a href="#"><i class="fa-solid fa-moon"></i></a></h1>
+    <h2><a href="#"><i class="fa-solid fa-moon"></i></a></h2>
+    <h3><a href="#"><i class="fa-solid fa-moon"></i></a></h3>
+    <h4><a href="#"><i class="fa-solid fa-moon"></i></a></h4>
+    <h5><a href="#"><i class="fa-solid fa-moon"></i></a></h5>
+    <h6><a href="#"><i class="fa-solid fa-moon"></i></a></h6>
+    <h3>Gerson</h3>
+
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
