--- a/freeCodeCamp/barra-de-navegacao/ges/01/index.html
+++ b/freeCodeCamp/barra-de-navegacao/ges/01/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>>Barra de Navegação</title>
+     <!-- font-awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        />
+        <!-- estilos -->
+        <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
-    
+    <nav>
+        <div class="navegacao-centro">
+            <!-- cabeçalho navegação -->
+            <div class="navegacao-cabecalho">
+                <i class="fab fa-free-code-camp navegacao-logotipo"></i>
+                <button class="navegacao-botao">
+                    <i class="fas fa-bars"></i>
+                </button>
+        </div>
+    </nav>
 </body>
 </html>
