--- a/freeCodeCamp/barra-de-navegacao/ges/02/index.html
+++ b/freeCodeCamp/barra-de-navegacao/ges/02/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>>Barra de Navegação</title>
-     <!-- font-awesome -->
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-        />
-        <!-- estilos -->
-        <link rel="stylesheet" href="estilo.css" />
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+    <!-- estilos -->
+    <link rel="stylesheet" href="estilo.css" />
 </head>
+
 <body>
     <nav>
         <div class="navegacao-centro">
@@ -21,7 +20,30 @@
                 <button class="navegacao-botao">
                     <i class="fas fa-bars"></i>
                 </button>
+            </div>
+            <!-- links -->
+            <ul class="navegacao-links">
+                <li><a href="index.html">início</a></li>
+                <li><a href="about.html">sobre</a></li>
+                <li><a href="projects.html">projetos</a></li>
+                <li><a href="contact.html">contato</a></li>
+            </ul>
+            <!-- ícones sociais -->
+            <ul class="navegacao-icones-sociais">
+                <li>
+                    <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+                </li>
+            </ul>
         </div>
     </nav>
+    <!-- javascript -->
+        <script src="script.js"></script>
 </body>
+
 </html>
