--- a/Desvendando o Código/exemplo01.html
+++ b/Desvendando o Código/exemplo01.html
@@ -21,7 +21,7 @@
             }  else if (e.key === 'r' || e.key === 'R'){e.key === 'r' 
                 counter = 0;
                 counterDisplay.textContent = counter;
-            } else if (e.key === 's' || e.key === 'S'){e.key === 'R' 
+            } else if (e.key === 's' || e.key === 'S'){e.key === 's' 
                 counter = 0;
                 return;;
             }
